--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,20 @@ repo_url: 'https://github.com/dmccreary/atam'
 
 nav:
   - Home: index.md
+  - About: about.md
+  - Bias: bias.md
+  - Database Types:
+    - Introduction: db-types/index.md
+    - Relational: db-types/01-relational.md
+    - Analytical: db-types/02-analytica.md
+    - Key Value: db-types/03-key-value.md
+    - Column Family: db-types/04-column-family.md
+    - Graph: db-types/05-graph.md
+    - Document: db-types/06-document.md
   - Case Studies:
     - Introduction: case-studies/index.md
     - STAR Process: case-studies/star-process.md
+    - Amazon Shopping Cart: case-studies/amazon-shopping-cart.md
   - Presentations: slides.md
   - License: license.md
   - Contact: contact.md
