--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
   - Bias: bias.md
   - Presentations: slides.md
   - License: license.md
+  - How We Built This Site: how-we-built-this-site.md
   - Contact: contact.md
  
 # CoderDojo Microsite Standards from here down
