--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,12 +16,12 @@ nav:
     - ACID vs. Base: concepts/acid-vs-base.md
   - Database Types:
     - Introduction: db-types/index.md
-    - Relational: db-types/01-relational.md
-    - Analytical: db-types/02-analytical.md
-    - Key Value: db-types/03-key-value.md
+    - Relational: db-types/relational/index.md
+    - Analytical: db-types/analytical/index.md
+    - Key Value: db-types/key-value/index.md
     - Column Family: db-types/04-column-family.md
-    - Graph: db-types/05-graph.md
-    - Document: db-types/06-document.md
+    - Graph: db-types/graph/index.md
+    - Document: db-types/document/index.md
   - Case Studies:
     - Introduction: case-studies/index.md
     - STAR Process: case-studies/star-process.md
