--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,15 +29,16 @@ nav:
   - Case Studies:
     - Introduction: case-studies/index.md
     - STAR Case Study Process: case-studies/star-process.md
-    - Amazon Shopping Cart: case-studies/amazon-shopping-cart.md
-    - Craigslist: case-studies/craigslist.md
     - Deep Research: case-studies/deep-research.md
+    - Amazon Shopping Cart: case-studies/amazon-shopping-cart.md
+    - Memcache: case-studies/memchache.md
+    - Craigslist: case-studies/craigslist.md
+    - Cassandra: case-studies/cassandra.md
     - Facebook: case-studies/facebook.md
     - Friendster: case-studies/friendster.md
     - Google Knowledge Graph: case-studies/google-knowledege-graph.md
     - LinkedIn: case-studies/linkedin.md
-    - Memcache: case-studies/memchache.md
-    - Netflix: case-studies/netflix.md
+    - TigerGraph: case-studies/tigergraph.md
   - Stories:
     - Introduction: stories/index.md
     - DynamoDB: stories/dynamodb/index.md
